tests/baselines/reference/jsFileCompilationTypeParameterSyntaxOfClass.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
tests/cases/compiler/a.js(1,9): error TS8004: 'type parameter declarations' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
==== tests/cases/compiler/a.js (1 errors) ====
    class C<T> { }
            ~
!!! error TS8004: 'type parameter declarations' can only be used in a .ts file.